# pharmacy-auth

./: .gitignore  .template.env  Makefile  docker-compose.yml  filebeat.yml  main.py  pyproject.toml
actions/: create_superuser.py
alembic/: env.py
alembic/versions/: 2024_10_07_1734-2dd51862ccbd_create_users_table.py  2024_10_07_1800-674ac8eec3a5_create_access_token_table.py
api/api_v1/auth/: __init__.py  auth.py  users.py
api/dependencies/authentication/: access_tokens.py  backend.py  mail_manager.py  my_fastapi_users.py  strategy.py  user_manager.py  users.py
core/: __init__.py  logger_setup.py  settings.py
core/authentication/: mail_manager.py  transport.py  user_manager.py
core/database/: __init__.py  db_helper.py
core/database/dto/: user.py
core/database/models/: __init__.py  access_token.py  base.py  users.py
core/database/shemas/: user.py
core/types/: __init__.py
infra/: gunicorn.conf.py
tests/: test_settings.py
utils/: __init__.py
